modificaciones de diseño

--- a/src/style/authStyles/login.scss
+++ b/src/style/authStyles/login.scss
@@ -15,7 +15,7 @@
         padding: 30px;
         border:  5px solid #5553de;
         border-radius: 50px;
-        background-color: #20a6ff;
+        background-color: #5e97b2;
     
         &__form {
             display: grid;
@@ -49,7 +49,7 @@
             transition: 0.5s ease;
 
             &:hover {
-                cursor: pointer;
+                cursor: url("../../static/assets/icons/icons8-cursor-de-mano-35.png"), auto;
                 transform: scale(1.1);
             }
         }
