--- a/src/style/blogStyles/blog.scss
+++ b/src/style/blogStyles/blog.scss
@@ -17,10 +17,10 @@
 
     h1 {
         font-family: 'Varela Round', sans-serif;
-        color: #2d2baa;
+        color: #86007b;
         padding: 8px;
-        background-color: #20a6ff;
-        border: 1px #2d2baa solid;
+        background-color: #5e97b2;
+        border: 1px #d600c5 solid;
         border-radius: 20px;
         margin-left: 40px;
         margin-right: 40px;
@@ -29,10 +29,10 @@
 
     p {
         font-family: 'Varela Round', sans-serif;
-        color: #2d2baa;
+        color: #000000;
         padding: 18px;
-        background-color: #f3f3f3;
-        border: 1px #2d2baa solid;
+        background-color: #e4e4e4;
+        border: 1px #d600c5 solid;
         border-radius: 20px;
         margin-bottom: 40px;
         font-size: 1.5rem;
