--- a/src/style/booksComponentStyles/imagenParrafo.scss
+++ b/src/style/booksComponentStyles/imagenParrafo.scss
@@ -23,7 +23,7 @@
         width: 450px;
         margin-left: 20px;
         margin-top: 20px;
-        font-family: 'Varela Round', sans-serif;
+        font-family: 'Balsamiq Sans', cursive;
         font-size: 24px;
     }
 
@@ -36,5 +36,7 @@
         outline: none;
         color: white;
         margin-top: 40px;
+        cursor: url("../../static/assets/icons/icons8-cursor-de-mano-35.png"), auto;
+        font-family: 'Balsamiq Sans', cursive;
     }
 }
