--- a/src/style/formFields.scss
+++ b/src/style/formFields.scss
@@ -35,6 +35,7 @@
         font-family: 'Varela Round', sans-serif;
         font-size: 25px;
         font-weight: bolder;
+        cursor: url("../../static/assets/icons/icons8-cursor-de-mano-35.png"), auto;
 
         :hover {
             cursor: pointer;
