--- a/src/style/juegostyles/colorGrid.scss
+++ b/src/style/juegostyles/colorGrid.scss
@@ -57,5 +57,6 @@
         font-size: 1.2rem;
         font-family: 'Aladin', cursive;
         width: 30%;
+        cursor: url("../../static/assets/icons/icons8-cursor-de-mano-35.png"), auto;
     }
 }
