--- a/src/style/booksComponentStyles/parrafoJuego.scss
+++ b/src/style/booksComponentStyles/parrafoJuego.scss
@@ -9,7 +9,7 @@
         width: 450px;
         margin-left: 20px;
         margin-top: 20px;
-        font-family: 'Varela Round', sans-serif;
+        font-family: 'Balsamiq Sans', cursive;
         font-size: 24px;
     }
 }
