--- a/src/style/topPage.scss
+++ b/src/style/topPage.scss
@@ -1,12 +1,14 @@
 .top-page {
     height: auto;
-    width: 100%;
+    width: 95vw;
     display: grid;
     grid-template-columns: 1fr 3fr;
 
     &__login-links {
         display: grid;
         height: 20px;
+        cursor: auto;
+
         
     }
     &__title {
@@ -14,8 +16,10 @@
         display: flex;
         justify-content: center;
         font-family: 'Flavors', cursive;
-        color: #5553de;
+        color: #d600c5;
         letter-spacing: 2px;
+        text-shadow: 6px 7px 2px #456e81;
+        
     }
 
     &__home,
@@ -26,10 +30,12 @@
         padding: 4px;
         padding-right: 0;
         border-end-end-radius: 100px 10px;
-        color: #1f1302;
+        color: #85007a;
         font-family: 'Varela Round', sans-serif;
-        cursor: pointer;
         transition: 1s ease-in-out;
+        cursor: url("../../static/assets/icons/icons8-cursor-de-mano-35.png"), auto;
+   
+        
 
         &:hover {
             border-end-end-radius: 10px 100px;
@@ -43,21 +49,22 @@
     }
 
     &__login {
-        border: 1px solid #5f490e;
+        border: 2px ridge #d600c5;
         width: 100%;
-        background-color: #6dd110;
+        background-color: #5e97b2;
+       
     }
     &__home {
-        border: 1px solid #5f490e;
+        border: 2px ridge #d600c5;
         border-top: none;
         width: 80%;
-        background-color: #20a6ff;
+        background-color: #74b9da;
     }
     &__language {
-        border: 1px solid #5f490e;
+        border: 2px ridge #d600c5;
         border-top: none;
         width: 60%;
-        background-color: #e61010;
+        background-color: #88d9ff;
     }
 }
 
