--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -1,6 +1,7 @@
 .books-grid {
     display: flex;
     flex-wrap: wrap;
+    gap: 40px;
     justify-content: space-around;
     padding: 100px;
     margin-top: 100px;
