cambio de fondo y arreglos en libros

--- a/src/style/portadaLibro.scss
+++ b/src/style/portadaLibro.scss
@@ -59,7 +59,7 @@
         font-family: 'Flavors', cursive;
         margin-top: 10px;
         margin-bottom: 20px;
-        text-shadow: 3px 3px 1px #47474779;
+        text-shadow: 3px 3px 1px #ffe488;
     }
 }
 
