--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -4,7 +4,7 @@ html {
 body {
     margin: 0;
     background-image: url("../../static/assets/dave-hoefler-PEkfSAxeplg-unsplash\ \(1\).jpg");
-    // background-image: url("../../static/assets/sharon-mccutcheon-SGI0i5sHCL8-unsplash.jpg");
+    background-image: url("../../static/assets/sharon-mccutcheon-gominolas.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     text-decoration: none;
