modificadass las url para conectar la api

--- a/src/style/booksComponentStyles/imagenParrafo.scss
+++ b/src/style/booksComponentStyles/imagenParrafo.scss
@@ -40,3 +40,12 @@
         font-family: 'Balsamiq Sans', cursive;
     }
 }
+
+@media (max-width: 1200px) {
+    .imagen-parrafo__imagen-texto {
+        width: 80vw;
+    }
+    .imagen-parrafo__imagen {
+        width: 90vw;
+    }
+}
