--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -3,7 +3,7 @@ html {
 }
 body {
     margin: 0;
-    background-image: url("../../static/assets/dave-hoefler-PEkfSAxeplg-unsplash\ \(1\).jpg");
+    // background-image: url("../../static/assets/dave-hoefler-PEkfSAxeplg-unsplash\ \(1\).jpg");
     background-image: url("../../static/assets/sharon-mccutcheon-gominolas.jpg");
     background-repeat: no-repeat;
     background-size: cover;
