modificados elementos css responsive

--- a/src/style/authStyles/login.scss
+++ b/src/style/authStyles/login.scss
@@ -68,7 +68,14 @@
     
     }
 }
+@media (max-width: 750px) {
 
+    .loginform {
+        width: 200px;
+        justify-content: center;
+
+    }
+}
 
 
 
