--- a/src/style/authStyles/signUp.scss
+++ b/src/style/authStyles/signUp.scss
@@ -54,3 +54,11 @@
         }
     }
 }
+@media (max-width: 750px) {
+
+    .signupform {
+        width: 200px;
+        justify-content: center;
+
+    }
+}
