--- a/src/style/topPage.scss
+++ b/src/style/topPage.scss
@@ -73,11 +73,16 @@
         display: flex;
         flex-direction: column;
 
+        &__login-links {
+            width: 100vw;
+        }
+
         &__title {
             margin-top: 30px;
             display: flex;
             justify-content: center;
             text-align: center;
+            font-size: 5em;
         }
     }
 }
